--- a/code/closed_cmr/zo4541_closed_cmr_2022.html
+++ b/code/closed_cmr/zo4541_closed_cmr_2022.html
@@ -343,20 +343,33 @@ div.tocify {
 
 <div id="closed-cmr-data" class="section level1">
 <h1>Closed CMR data</h1>
-<p>Important highlights of closed CMR models:</p>
+</div>
+<div id="what-are-closed-cmr-models" class="section level1">
+<h1>What are closed CMR models?</h1>
 <ul>
 <li><p>The aim of closed CMR models is to estimate population size. One of the most fundamental pieces of information for conservation.</p></li>
-<li><p>Because we always know how many animals we caught, the objective to estimate the number of animals we did not catch.</p></li>
-<li><p>The number of animals caught is an estimated parameter (where a parameter is an unknown value estimated from the observation we have), and in <code>MARK</code> this parameter is referred to as <code>f0</code>.</p></li>
-<li><p>To estimate <code>f0</code>, we need to estimate capture probability (i.e., we assume <em>imperfect</em> detection).</p></li>
-<li><p>Estimating capture probabilities is how we figure out how many animals were not caught.</p></li>
+<li><p>But the challenge is that we can rarely, if ever, observe all animals in a population.</p></li>
+<li><p>Therefore, because we do know how many animals we caught, the objective to estimate the number of animals we did not catch.</p>
+<ul>
+<li><em>Number of captured animals + number of uncaptured animals = total population size.</em></li>
+</ul></li>
+<li><p>The number of animals that we never caught is an estimated parameter (where a parameter is an unknown single value, e.g., 18, which is estimated from the data we have observed).</p>
+<ul>
+<li>In <code>MARK</code>, this parameter is referred to as <code>f0</code>.</li>
+</ul></li>
+<li><p>To estimate <code>f0</code> (number of animals never caught), we need to estimate what the capture probabilities are</p>
+<ul>
+<li>This means that we assume <em>imperfect detection</em>, i.e., we assume we have not caught all animals in a population.</li>
+</ul></li>
+<li><p>Estimating capture probabilities is how we figure out how many animals were not caught.</p>
+<ul>
+<li><p>If we know we caught 10 animals with a capture rate of 50%, then it is very likely there were 10 animals we never caught.</p></li>
+<li><p>Note that this becomes more complex when we trap over multiple days.</p></li>
+</ul></li>
 </ul>
-<p>For example, assume 3 days of trapping, where the capture probability is a constant 50% (i.e., it’s a coin flip if we capture an animal or not). The cumulative probability to capture an animal on all three days (and have an observed capture history of 111) is therefore <span class="math inline">\(Pr(CH_{111}) = p \times p \times p = 0.5 \times 0.5 \times 0.5 = 0.125 = 12.5\%\)</span> (So with a capture probability of 0.5, we have a 12.5% chance to capture an animal on all 3 days). Conversley, the probability to never capture an animal is <span class="math inline">\(Pr(CH_{000}) = (1-p) \times (1-p) \times (1-p) = (1-0.5) \times (1-0.5) \times (1-0.5) = 0.5 \times 0.5 \times 0.5 = 0.125 = 12.5\%\)</span></p>
-<p>Alternative, assume 3 days of trapping where capture probabilities vary over time (<span class="math inline">\(p_1 = 0.1\)</span>, <span class="math inline">\(p_2 = 0.4\)</span>, <span class="math inline">\(p_3 = 0.8\)</span>). The probability to capture an animal on all 3 days is therefore <span class="math inline">\(Pr(CH_{111}) = p_1 \times p_2 \times p_3 = 0.1 \times 0.4 \times 0.8 = 0.03 = 3\%\)</span>. Conversley, the probability to never capture an animal is <span class="math inline">\(Pr(CH_{000}) = (1-p_1) \times (1-p_2) \times (1-p_3) = (1-0.1) \times (1-0.4) \times (1-0.8) = 0.9 \times 0.6 \times 0.2 = 0.11 = 11\%\)</span>. In this example, we’re very unlikely to capture an animal on all 3 days of trapping, but we are comparatively more likely to <em>never</em> captured an animal on all 3 days.</p>
-<p><code>MARK</code> uses this information to estimate <code>f0</code> (see lecture slides for more details on how this happens).</p>
 </div>
-<div id="details-of-the-data-collection" class="section level1">
-<h1>Details of the data collection</h1>
+<div id="details-of-the-amami-rabbit-data-collection" class="section level1">
+<h1>Details of the Amami rabbit data collection</h1>
 <p>In 1965 a capture-mark-recapture trapping session, lasting three days, occurred across Amami island in a selection of sites known to have Amami rabbits present. Traps were baited with potato and carrots and were checked once every 24 hours. Researchers did not record any additional information.</p>
 <p>This data collection process was replicated in 1983, and again in 2022. However, in 2022 researchers noted the age of the rabbit, determined by weight (including one year olds, two year olds, and adults [&gt;= 3 years old]).</p>
 </div>
